add create user register and create config
